--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.8
   - pip
-  - streamlit=1.7.0
-  - pandas=1.4.1
   - pip:
+    - streamlit==1.7.0
+    - pandas==1.4.1
     - openpyxl==3.0.9
